fix: fixed header z-index to fix layering with announcement banner

--- a/source/stylesheets/_header.sass
+++ b/source/stylesheets/_header.sass
@@ -116,6 +116,7 @@
     position: fixed
     top: 0
     left: 0
+    z-index: 501
 
   &.has-welcome
     background: var(--header-background-color)
